# scaffolds

./: README.md
c/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  patch_all.py
lua/: .luarc.json
python/: pyrightconfig.json
